[package]
name = "tokio-socketcan"
version = "0.1.3"
authors = ["Terry Kerr <root@oefd.ca>"]
edition = "2018"
description = "Asynchronous Linux SocketCAN sockets with tokio"
license = "MIT"
repository = "https://github.com/oefd/tokio-socketcan"

[dependencies]
socketcan = "1.7"
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await", "nightly"] }
futures-util-preview = { version = "=0.3.0-alpha.18", features = ["async-await", "nightly"] }
tokio = "0.2.0-alpha.2"
tokio-net = "0.2.0-alpha.1"
mio = "0.6"
libc = "0.2"

[dev-dependencies]
runtime = { git = "https://github.com/rustasync/runtime.git", branch = "master" }